--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,172 @@
 body {
-    margin: 0 auto;
+    background-color: aquamarine;
     text-align: center;
+    font-family: sans-serif;
+    margin: 0 auto;
+}
+
+.heading {
+    padding-top: 20px;
+}
+
+h1 {
+    margin-top: 0;
+    font-size: 40px;
+}
+
+.header1 {
+    margin-top: 20px;
+}
+
+.smiley-container {
+    font-size: 60px;
+    margin: 0 auto;
+    width: 90px;
+    height: 90px;
+    cursor: pointer;
+    /* background-color: lightcoral;; */
+}
+
+.timer-div {
+    font-size: 40px;
+    width: 500px;
+    height: 50px;
+    background-color: lightblue;
+    margin: 0 auto;
+}
+
+.game-board {
+    flex: 0 0 40%;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.table {
+    margin: 0 auto;
+    border: 4px solid lightskyblue;
+}
+
+.cell {
+    height: 35px;
+    width: 35px;
+    background-color: lightcoral;
+    cursor: pointer;
+    margin: 0;
+}
+
+
+
+.button {
+    margin-left: 20px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+    background-color: lightsalmon;
+    font-size: 30px;
+}
+
+.cell:hover {
     background-color: aquamarine;
 }
 
-table {
+.mine-counter {
+    background-color: lightsalmon;
     margin: 0 auto;
-    text-align: center;
-    font-size: 40px;
-    border: 4px solid red;
-    background-color: lightcoral;
+    width: 500px;
+    
 }
 
-.board td {
-    width: 80px;
-    height:80px;
+.flag-counter {
     text-align: center;
-    font-size:1.4em;
-    border: 4px solid lightpink
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 500px;
+    background-color: lightskyblue;
+    
+}
+.levels {
+    width: 500px;
+    margin: 0 auto;
+}
+
+.level-button-1 {
+    background-color: lightsalmon;
+    border-radius: 15px;
+    display: inline-block;
+    cursor: pointer;
+    color: black;
+    font-size: 17px;
+    font-weight: bold;
+    padding: 9px 30px;
+    text-decoration: none;
+    margin: 5px;
+    font-weight: 600;
+}
+
+.level-button-1:hover {
+    background-color: lightskyblue;
+}
+
+.level-button-2 {
+    background-color: lightsalmon;
+    border-radius: 15px;
+    display: inline-block;
+    cursor: pointer;
+    color: black;
+    font-size: 24px;
+    font-weight: bold;
+    padding: 9px 30px;
+    text-decoration: none;
+    margin: 5px;
+    font-weight: 400;
+}
+
+.level-button-2:hover {
+    background-color: lightskyblue;
+}
+
+.level-button-3 {
+    background-color: lightsalmon;
+    border-radius: 15px;
+    display: inline-block;
+    cursor: pointer;
+    color: black;
+    font-size: 33px;
+    font-weight: bold;
+    padding: 9px 30px;
+    text-decoration: none;
+    margin: 5px;
+    font-weight: 400;
+}
+
+.level-button-3:hover {
+    background-color: lightskyblue;
+}
+
+button {
+    margin: 3px;
+}
+
+.game-over .game-over {
+    /* text-align: center; */
+    margin: 0 auto;
+    margin-top: 50px;
+    font-size: 50px;
+    background-color: lightsalmon;
+    border: 6px solid lightcoral;
+    width: 400px;
+    height: 100px;
+    padding-top: 40px;
+}
+
+.winner .winner {
+    /* text-align: center; */
+    margin: 0 auto;
+    margin-top: 50px;
+    font-size: 50px;
+    background-color: lightskyblue;
+    border: 6px solid lightcoral;
+    width: 400px;
+    height: 100px;
+    padding-top: 40px;
 }
