--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,57 @@
 body {
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
+    background-image: url(/img/pic1.jpeg);
+    background-size: cover;
+    background-position: center;
+    /* background-position: inherit; */
     text-align: center;
     font-family: sans-serif;
     margin: 0 auto;
 }
 
+@keyframes color-change {
+     0% {background-color: lightcoral;}
+     50% {background-color: lightskyblue;}
+     100% {background-color: lightcoral;}
+  }
+
+.border-left {
+    float: left;
+    height: 1000px;
+    width: 200px;
+    background-color:lightskyblue ;
+    margin-right: 30px;
+    animation-name: color-change;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+.border-right {
+    float: right;
+    height: 1000px;
+    width: 200px;
+    background-color:lightskyblue ;
+    margin-left: 30px;
+    animation-name: color-change;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+
 
 .heading {
     padding-top: 20px;
+   
 }
+.heading h1 {
 
+    color: lightskyblue;
+background-color:lightcoral ;
+animation-name: color-change;
+animation-duration: 8s;
+animation-iteration-count: infinite;
+animation-timing-function: ease-in-out;
+}
 h1 {
     margin-top: 0;
     font-size: 40px;
@@ -25,14 +67,14 @@ h1 {
     width: 90px;
     height: 90px;
     cursor: pointer;
-    /* background-color: lightcoral;; */
+  
 }
 
 .timer-div {
     font-size: 40px;
     width: 500px;
     height: 50px;
-    background-color: lightblue;
+    background-color: lightskyblue;
     margin: 0 auto;
 }
 
@@ -65,6 +107,7 @@ h1 {
 
 .cell:hover {
     background-color: aquamarine;
+    cursor: crosshair;
 }
 
 .mine-counter {
@@ -88,6 +131,7 @@ h1 {
 }
 
 .level-button-1 {
+    transition: background-color 0.5s ;
     background-color: lightsalmon;
     border-radius: 15px;
     display: inline-block;
@@ -106,6 +150,7 @@ h1 {
 }
 
 .level-button-2 {
+    transition: background-color 0.5s ;
     background-color: lightsalmon;
     border-radius: 15px;
     display: inline-block;
@@ -124,6 +169,7 @@ h1 {
 }
 
 .level-button-3 {
+    transition: background-color 0.5s ;
     background-color: lightsalmon;
     border-radius: 15px;
     display: inline-block;
@@ -146,7 +192,7 @@ button {
 }
 
 .game-over .game-over {
-    /* text-align: center; */
+   
     margin: 0 auto;
     margin-top: 50px;
     font-size: 50px;
@@ -158,7 +204,7 @@ button {
 }
 
 .winner .winner {
-    /* text-align: center; */
+  
     margin: 0 auto;
     margin-top: 50px;
     font-size: 50px;
@@ -180,3 +226,4 @@ button {
     background-color: lightcoral;
     text-align: center;
     padding: 6px;
+}
